--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -21,7 +21,6 @@
 <body>
 
 	<!-- Navigation -->
-	<!-- Navigation -->
 	<div th:include="usuario/template_usuario.html::header">
 
 	</div>
@@ -49,7 +48,7 @@
 						</a>
 					</div>
 					<div class="col-lg-6">
-						<form action="carrito.html" method="POST">
+						<form th:action="@{/cart}" method="POST">
 							<h2 class="card-title" th:text="${producto.nombre}"></h2>
 
 							<ul class="list-group">
