vitas para compras user

--- a/src/main/resources/templates/usuario/compras.html
+++ b/src/main/resources/templates/usuario/compras.html
@@ -12,18 +12,19 @@
 
 
 	<!-- Bootstrap core CSS -->
-	<link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+	<link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
-	<link th:href="@{css/heroic-features.css}" rel="stylesheet">
+	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
 </head>
 
 <body>
 
-  	<!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header">
-
+ 	<!-- Navigation -->
+	<div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}">
+	</div>
+	<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}">
 	</div>
 
 
@@ -37,7 +38,7 @@
       </h1>
 
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
         <li class="breadcrumb-item active">Compras</li>
       </ol>
 
@@ -69,14 +70,15 @@
       </div>
     </div>
   </div>
-  <!-- /.container -->
+    <!-- /.container -->
+
 		<!-- Footer -->
-			<div th:include="usuario/template_usuario.html::footer">
+		<div th:include="usuario/template_usuario.html::footer">
 
 
 		<!-- Bootstrap core JavaScript -->
-		<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-		<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+		<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+		<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
