--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -21,8 +21,10 @@
 <body>
 
  <!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header">
-
+		<!-- Navigation -->
+	<div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}">
+	</div>
+	<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}">
 	</div>
 
     <!-- Page Content -->
