--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -3,28 +3,31 @@
 
 <head>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
 
-	<title>Spring eCommerce</title>
+<title>Spring eCommerce</title>
 
 
-	<!-- Bootstrap core CSS -->
-	<link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link th:href="@{vendor/bootstrap/css/bootstrap.min.css}"
+	rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link th:href="@{css/heroic-features.css}" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link th:href="@{css/heroic-features.css}" rel="stylesheet">
 
 </head>
 
 <body>
 
 	<!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header">
-	
+	<div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}">	
 	</div>
+	
+	<div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}"> </div>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -40,28 +43,31 @@
 
 			<div class="col-lg-3 col-md-6 mb-4" th:each="producto: ${productos}">
 				<div class="card h-100">
-					<img class="card-img-top" th:src="@{/images/{img} (img=${producto.imagen})}" alt="">
+					<img class="card-img-top"
+						th:src="@{/images/{img} (img=${producto.imagen})} " alt="">
 					<div class="card-body">
 						<p class="card-text" th:text="${producto.nombre}"></p>
 					</div>
 					<div class="card-footer">
-						<a th:href="@{/productohome/{id} (id=${producto.id})}" class="btn btn-success">Ver producto</a>
+						<a th:href="@{/productohome/{id}  (id=${producto.id})  }" class="btn btn-success">Ver
+							producto</a>
 					</div>
 				</div>
 			</div>
 
-			<!-- /.row -->
-
 		</div>
-		<!-- /.container -->
+		<!-- /.row -->
 
-		<!-- Footer -->
-			<div th:include="usuario/template_usuario.html::footer">
+	</div>
+	<!-- /.container -->
 
+	<!-- Footer -->
+	<div th:include="usuario/template_usuario.html::footer">
+	</div>
 
-		<!-- Bootstrap core JavaScript -->
-		<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-		<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script th:src="@{vendor/jquery/jquery.min.js}"></script>
+	<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
 </body>
 
