--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -22,7 +22,8 @@
 							aria-expanded="false"> ADMIN </a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" th:href="@{/productos}">Productos</a>
-								<a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a> 
+							<a class="dropdown-item" th:href="@{/administrador/usuarios}">Usuarios</a>
+							<a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a>
 						</div>
 					</li>
 				</ul>
